test/failing/badintfield4.trunnel

struct y {
  u8 a;
}

struct x {
   struct y a;
   union u[a] {
     1 : u8 x;
     2 : u16 y;
   };
}

